--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   audioplayers: ^6.5.0
   file_picker: ^8.0.0
   permission_handler: ^11.3.1
+  provider: ^6.1.5
+  
   
 
   # The following adds the Cupertino Icons font to your application.
